using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimatorStates
{
    public const string Running = "Running";
    public const string Idle = "Idle";
    public const string Hurt = "Hurt";
    public const string Jumping = "Jumping";
    public const string Die = "Die";
}