using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class States
{
    public static readonly string Running = "Running";
    public static readonly string Idle = "Idle";
    public static readonly string Hurt = "Hurt";
    public static readonly string Jumping = "Jumping";
    public static readonly string Die = "Die";
    public static readonly string Fade = "Fade";
}